templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tyagi-config
  labels:
    first: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopkart
  template:
    metadata:
      labels:
        app: shopkart
    spec:
      containers:
        - name: tyagi-shopkart
          image: himalayat/shopkart:v1.0
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: tyagi-service
spec:
  selector:
    app: shopkart
  ports:
    - protocol: TCP
      port: 85
      targetPort: 8080
  type: ClusterIP
