templates/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tyagi-config1
  labels:
    first: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: tyagi-nginx
          image: nginx
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: tyagi-service1
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 85
      targetPort: 80
      nodePort: 30007
  type: NodePort
